--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMS.js</title>
+    <title>BLOGATAMAGO</title>
     <meta name="description" content="The JavaScript Site Generator">
-    <meta name="author" content="">
+    <meta name="author" content="TongariAtamago">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <link rel="stylesheet" href="./css/animations.css">
     <link rel="stylesheet" href="./css/poole.min.css">
@@ -22,10 +22,10 @@
       <header class="masthead">
         <h3 class="masthead-title">
         <a href="#" class="sitename" title="Home">
-          CMS.js
+          BLOGATAMAGO
         </a>
         <small class="tagline">
-          The Javascript Site Generator
+          ~BLOGゾ~
         </small>
         </h3>
         <!-- Navigation -->
